# timeseries_molecular

./: .gitignore  GRANT_WRITING_ACTION_PLAN.md  MANUSCRIPT_OUTLINES_SUMMARY.md  PROPOSAL_EXECUTIVE_SUMMARY.md  PROPOSAL_INDEX.md  QUICK_START_GUIDE.md  README.md  REPOSITORY_REVIEW_AND_MANUSCRIPT_OUTLINES.md  RESEARCH_GAPS_ANALYSIS.md  RESEARCH_PROPOSAL_PLAN.md  SAMPLING_DATES.md  bu.sh  complete_epeve_processing.sh  generate_methylation_bedgraphs.py  master-molecular-metadata.csv  pyproject.toml  test.tblout  timeseries_molecular.Rproj
B-Ptua/: README.md
D-Apul/: README.md
E-Peve/: README.md
M-multi-species/: 33-rank35-comp05.Rmd  new-sparse-tensor-decomp.plan.md
M-multi-species/scripts/20-new-sparse-tensor-decompositon-model/: README.md  config.yaml  pyproject.toml  smoke_test.py  test_subset.csv
M-multi-species/scripts/20-new-sparse-tensor-decompositon-model/output/export/: decomposition_results.json  gene_factors_with_ids.csv  species_factors_with_codes.csv  time_factors_with_labels.csv
M-multi-species/scripts/20-new-sparse-tensor-decompositon-model/output/fit/: fit_metrics.json  gene_factors.csv  loss_history.csv  species_factors.csv  time_factors.csv
M-multi-species/scripts/20-new-sparse-tensor-decompositon-model/output/optimization/: best_params.json  optuna_study.pkl  top_trials.csv  trials.csv
M-multi-species/scripts/20-new-sparse-tensor-decompositon-model/output/tensor/: tensor.npz
M-multi-species/scripts/20-new-sparse-tensor-decompositon-model/smoke_test_output/: fit_metrics.json  gene_factors.csv  genes.csv  loss_history.csv  species.csv  species_factors.csv  tensor.npz  tensor_shapes.json  time_factors.csv
M-multi-species/scripts/20-new-sparse-tensor-decompositon-model/src/new_tensor/: __init__.py  cli.py  io.py  model.py  optimize.py  plotting.py  preprocess.py  tensor.py  utils.py
M-multi-species/scripts/20-new-sparse-tensor-decompositon-model/src/new_tensor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
assets/: go_filter.txt  go_filter_02.clean.txt  go_filter_02.txt
data/: README.md  rna_metadata.csv
methylation_bedgraphs/: D-Apul_methylation.bedgraph  README.md
(+9497 files in other folders)
