[project]
name = "barnacle-boilerplate"
version = "0.1.0"
description = "Quickstart notebooks and scripts for using Barnacle to analyze your data."
authors = [{ name = "Stephen Blaskowski", email = "stephen.blaskowski@gmail.com" }]
requires-python = ">=3.10,<3.12"
readme = "README.md"
license = "MIT"
dependencies = [
    "jupyter>=1.1.1,<2",
    "tensorly-lab",
    "h5py>=3.12.1,<4",
    "netcdf4>=1.7.2,<2",
    "barnacle",
    "rpy2<3.5.17",
    "tqdm>=4.67.1,<5",
    "tomli>=2.2.1,<3",
    "tomli-w>=1.2.0,<2",
    "pandas>=2.2.3",
    "numpy>=1.26.4",
    "matplotlib>=3.10.0",
]

[tool.uv]
package = false

[tool.uv.sources]
tensorly-lab = { git = "https://github.com/tensorly/lab.git" }
barnacle = { git = "https://github.com/blasks/barnacle.git", rev = "612b6a4" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
